Fix headers when installing oscr.hpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,12 +63,14 @@ SET_TARGET_PROPERTIES (oscr PROPERTIES
 #   TARGET_LINK_LIBRARIES(oscr ${qpOASES_LIBRARIES})
 # ENDIF()
 
+FILE(GLOB HEADERS_OSCR  ${CMAKE_SOURCE_DIR}/include/oscr/*.hpp)
 FILE(GLOB HEADERS_TOOLS ${CMAKE_SOURCE_DIR}/include/oscr/tools/*.hpp)
 FILE(GLOB HEADERS_MODEL ${CMAKE_SOURCE_DIR}/include/oscr/model/*.hpp)
 FILE(GLOB HEADERS_IK    ${CMAKE_SOURCE_DIR}/include/oscr/ik/*.hpp)
 
 # Installation targets
 INSTALL(TARGETS oscr DESTINATION lib)
+INSTALL(FILES ${HEADERS_OSCR}  DESTINATION include/oscr)
 INSTALL(FILES ${HEADERS_TOOLS} DESTINATION include/oscr/tools)
 INSTALL(FILES ${HEADERS_MODEL} DESTINATION include/oscr/model)
 INSTALL(FILES ${HEADERS_IK} DESTINATION include/oscr/ik)
