Take special care of new eigen and urdfdom versions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ PKG_CHECK_MODULES(EIGEN3 eigen3>=3.2 REQUIRED)
 PKG_CHECK_MODULES(RBDL rbdl>=2.5 REQUIRED)
 PKG_CHECK_MODULES(PINOCCHIO pinocchio REQUIRED)
 PKG_CHECK_MODULES(QPOASES qpoases>=3.2 REQUIRED)
+PKG_CHECK_MODULES(URDFDOM urdfdom>=0.2 REQUIRED)
 # Try to find qpoases if there is no pkg-config for it
 IF(NOT ${QPOASES_FOUND})
   FIND_PACKAGE(QPOASES)
@@ -50,6 +51,40 @@ IF(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
   MESSAGE(STATUS "Using build type: 'Release' (none was specified).")
   SET(CMAKE_BUILD_TYPE RELEASE CACHE STRING "Choose the type of build." FORCE)
 ENDIF()
+
+# Special care for Eigen>3.2.10
+IF(EIGEN3_FOUND)
+  IF(${EIGEN3_VERSION} VERSION_GREATER "3.2.10")
+    ADD_DEFINITIONS(-DEIGEN3_FUTURE)
+    SET(EIGEN3_FUTURE TRUE)
+    SET(_PKG_CONFIG_CFLAGS "${_PKG_CONFIG_CFLAGS} -DEIGEN3_FUTURE" CACHE INTERNAL "")
+    IF(${EIGEN3_VERSION} VERSION_LESS "3.3.0")
+      ADD_DEFINITIONS(-DEIGEN3_BETA_3_2_9x)
+      SET(EIGEN3_FUTURE TRUE)
+      SET(_PKG_CONFIG_CFLAGS "${_PKG_CONFIG_CFLAGS} -DEIGEN3_BETA_3_2_9x" CACHE INTERNAL "")
+    ENDIF(${EIGEN3_VERSION} VERSION_LESS "3.3.0")
+  ELSE(${EIGEN3_VERSION} VERSION_GREATER "3.2.10")
+    SET(EIGEN3_FUTURE FALSE)
+  ENDIF(${EIGEN3_VERSION} VERSION_GREATER "3.2.10")
+ENDIF(EIGEN3_FOUND)
+
+# Special care for urdfdom versions
+IF(URDFDOM_FOUND)
+  IF(${URDFDOM_VERSION} VERSION_LESS "0.3.0")
+    ADD_DEFINITIONS(-DURDFDOM_COLLISION_WITH_GROUP_NAME)
+    SET(_PKG_CONFIG_CFLAGS "${_PKG_CONFIG_CFLAGS} -DURDFDOM_COLLISION_WITH_GROUP_NAME" CACHE INTERNAL "")
+  ENDIF(${URDFDOM_VERSION} VERSION_LESS "0.3.0")
+  # Types from version 0.4.0
+  IF(NOT ${URDFDOM_VERSION} VERSION_LESS "0.4.0")
+    ADD_DEFINITIONS(-DURDFDOM_TYPEDEF_SHARED_PTR)
+    SET(_PKG_CONFIG_CFLAGS "${_PKG_CONFIG_CFLAGS} -DURDFDOM_TYPEDEF_SHARED_PTR" CACHE INTERNAL "")
+  ENDIF(NOT ${URDFDOM_VERSION} VERSION_LESS "0.4.0")
+  # From version 1.0.0, std::shared_ptr appears
+  IF(${URDFDOM_VERSION} VERSION_GREATER "0.4.2")
+    ADD_DEFINITIONS(-DURDFDOM_USE_STD_SHARED_PTR)
+    SET(_PKG_CONFIG_CFLAGS "${_PKG_CONFIG_CFLAGS} -DURDFDOM_USE_STD_SHARED_PTR" CACHE INTERNAL "")
+  ENDIF(${URDFDOM_VERSION} VERSION_GREATER "0.4.2")
+ENDIF(URDFDOM_FOUND)
 
 # OSCR Library
 ADD_SUBDIRECTORY(src)
