--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,9 @@ language:
 cache:
   - apt
 
-# Configuration variables. All variables are global now, but this can be used
-# to trigger a build matrix for different ROS distributions if desired.
-env:
-  global:
-    - PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages:/usr/local/lib/python2.7/dist-packages
+# env:
+#   global:
+#     - PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages:/usr/local/lib/python2.7/dist-packages
 
 # Install system dependencies, namely a very barebones ROS setup.
 before_install:
@@ -45,3 +43,10 @@ script:
   # Run the tests, ensuring the path is set correctly.
   - cd examples/c++
   - ./ff6dofModel
+  # Configure for Python support
+  - echo 'export PYTHONPATH=~/install/lib/python2.7/site-packages:$PYTHONPATH' >> ~/.bashrc
+  - echo 'export LD_LIBRARY_PATH=~/dev/control/install/lib:$LD_LIBRARY_PATH' >> ~/.bashrc
+  - source ~/.bashrc
+  - cd ~/build/oscar-ramos/oscr/unitTests/python
+  - python testMathUtils.py
+                                               
