Add urdfdom in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
 before_install:
   - sudo apt-get update
   - sudo apt-get install libeigen3-dev libboost-all-dev swig
+  - sudo apt-get install liburdfdom-dev liburdfdom-headers-dev
   
 # Create a catkin workspace with the package under integration.
 install:
